--- a/my-homepage/src/TypingText.css
+++ b/my-homepage/src/TypingText.css
@@ -15,37 +15,37 @@ body {
 }
 .b1{
   position: relative;
-  background-color: rgb(0, 255, 170);
-  color: rgba(255, 255, 255, 1);
+  background-color: rgb(118, 221, 178);
+  color: rgb(255, 255, 255);
   font-family: 'Knewave', cursive;
   font-size: 20px;
   text-decoration: none;
   display: block;
   padding: 7px;
-  border-radius: 11px;
-  box-shadow: 0 9px 0 rgb(6, 206, 162),0px 9px 25px rgba(0, 0, 0, .7);
+  border-radius: 13px;
+  box-shadow: 0 9px 0 rgb(27, 141, 93),0px 9px 25px rgba(0, 0, 0, .7);
   left:-70%;
-  margin-top: 180%;
+  margin-top: 100%;
   width: 200px;
   text-align: center;
 }
 .b1:active {
-  box-shadow: 0 3px 0  rgb(6, 206, 162),0px 3px 6px rgba(0, 0, 0, .7);
+  box-shadow: 0 3px 0  rgb(27, 141, 93),0px 3px 6px rgba(0, 0, 0, .7);
   position: relative;
   top: 6px;
 }
 
 .b2{
   position: relative;
-  background-color: rgb(253, 83, 83);
-  color: rgba(255, 255, 255, 1);
+  background-color: rgba(197, 197, 197, 0.719);
+  color: rgb(109, 109, 109);
   font-family: 'Knewave', cursive;
   font-size: 20px;
   text-decoration: none;
   display: block;
   padding: 7px;
-  border-radius: 11px;
-  box-shadow: 0 9px 0 rgb(192, 0, 0),0px 9px 25px rgba(0, 0, 0, .7);
+  border-radius: 13px;
+  box-shadow: 0 9px 0 rgb(90, 90, 90),0px 9px 25px rgba(0, 0, 0, .7);
   left:70%;
   margin-top: -21%;
   
@@ -53,7 +53,7 @@ body {
   text-align: center;
 }
 .b2:active {
-  box-shadow: 0 3px 0  rgb(192, 0, 0),0px 3px 6px rgba(0, 0, 0, .7);
+  box-shadow: 0 3px 0  rgb(90, 90, 90),0px 3px 6px rgba(0, 0, 0, .7);
   position: relative;
   top: 6px;
 }
