드라이브3완성

--- a/my-homepage/src/App.css
+++ b/my-homepage/src/App.css
@@ -929,6 +929,22 @@ body{
     left: -100%;
     top:105%;
     visibility: visible;
+    width: 105px;
+    height: 105px;
+  }
+}
+@keyframes fadeInLeft2_w {
+  0% {
+    left: 80%;
+    top:80%;
+    visibility: hidden;
+  }
+  to {
+    left: -100%;
+    top:105%;
+    visibility: visible;
+    width: 390px;
+    height: 190px;
   }
 }
 @keyframes wheel_rotate{
@@ -944,7 +960,7 @@ body{
   width: 380px;
   height: 170px;
   z-index: 1;
-  animation: fadeInLeft2 5s;
+  animation: fadeInLeft2_w 5s;
   animation-timing-function: linear;
   animation-fill-mode:forwards;
   visibility: hidden;
@@ -1037,3 +1053,330 @@ body{
 
 /*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
 /*@@@@@@@@@@@@@@@@@@@@@@@@드라이브3@@@@@@@@@@@@@@@@@@@@@@@@@*/
+.rail_drive3{
+  position: absolute;
+  border-bottom: 1800px solid black;
+  border-left:  0px solid transparent;
+  border-right: 30000px solid transparent;
+  width: 2000px;
+  top:90%;
+  left: 30%;
+  transform:translate(-50%, -50%);
+ }
+ .rail_drive33{
+  position: absolute;
+  border-bottom: 2400px solid rgb(255, 255, 255);
+  border-left:  0px solid transparent;
+  border-right: 29000px solid transparent;
+  width: 2000px;
+  top:120%;
+  left: 90%;
+  transform:translate(-50%, -50%);
+ }
+ /*@@@@@@@@@@@@지바겐드라이브3@@@@@@@@@@@@@@*/
+ @keyframes fadeInLeft3 {
+  0% {
+    left: 110%;
+    top:85%;
+    width: 440px;
+    height: 210px;
+    visibility: hidden;
+  }
+  to {
+    left: -100%;
+    top:47%;
+    visibility: visible;
+    width: 280px;
+    height: 110px;
+  }
+}
+@keyframes fadeInLeft3_w {
+  0% {
+    left: 110%;
+    top:85%;
+    visibility: hidden;
+  }
+  to {
+    left: -99%;
+    top:47%;
+    visibility: visible;
+    width: 45px;
+    height: 45px;
+  }
+}
+ .g_class_drive3{
+  position: absolute;
+  width: 440px;
+  height: 210px;
+  z-index: 1;
+  top: 80%;
+  left: 110%;
+
+  animation : fadeInLeft3 5s;
+  visibility: hidden;
+  animation-delay: 1s;
+ }
+ .wheel_control_drive3{
+  position: absolute;
+  top: 80%;
+  left: 110%;
+  width: 100px; 
+  height: 100px;
+  background-color: rgba(247, 0, 0, 0);
+  transform:translate(-50%, -50%);
+  z-index: 1;
+
+  animation : fadeInLeft3_w 5s;
+  visibility: hidden;
+  animation-delay: 1s;
+}
+
+.w1_drive3{
+  position: absolute;
+  width: 37px;
+  height: 37px;
+  top:192%;
+  left: 117%;
+
+  animation: wheel_rotate 0.3s linear infinite;
+  transform-origin: 50% 50%;
+  z-index: 1;
+}
+.w2_drive3{
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  top:200%;
+  left: 285%;
+  
+  animation: wheel_rotate 0.3s linear infinite;
+  transform-origin: 50% 50%;
+  z-index: 1;
+}
+
+.t_drive3{
+  position: absolute;
+  width: 400px;
+  height: 400px;
+  top:45%;
+  left: 75%;
+  z-index: -1;
+  transform:rotate(2deg);
+
+}
+.c_drive3{
+  position: absolute;
+  width: 250px;
+  height: 250px;
+  top:52%;
+  left: 5%;
+  z-index: -1;
+
+}
+.go_to_scene_4{
+  position: absolute;
+  width: 10000px;
+  height: 3000px;
+  background-color: rgb(0, 0, 0);
+  z-index: 1;
+  top: 70%;
+  left: 50%;
+
+  visibility: hidden;
+  animation: for_scene_3 3s;
+  transform:translate(-50%, -50%);
+  animation-delay: 4s;
+  animation-fill-mode: forwards;
+}
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@드라이브4@@@@@@@@@@@@@@@@@@@@@@@@@*/
+  /*드라이브4__지바겐*/
+  @keyframes move_drive4_g {
+    0% {
+      width: 330px;
+      height: 220px;;
+      top: 90%;
+      left: 20%;
+    }
+    50%{
+      width: 330px;
+      height: 220px;;
+      top: 90.1%;
+      left: 19.98%;
+    }
+    100%{
+      width: 330px;
+      height: 220px;;
+      top: 89.9%;
+      left: 20.02%;
+    }
+  }
+.g_class_drive4{
+  position: absolute;
+  width: 330px;
+  height: 220px;;
+  top: 90%;
+  left: 20%;
+  transform:translate(-50%, -50%);
+  animation: move_drive4_g 0.1s infinite;
+  z-index: 2;
+ }
+
+  /*드라이브4__로드*/
+ .drive4_car1_background{
+  position: absolute;
+  width: 2000px;
+  height: 2000PX;
+  top: 0%;
+  left: 40%;
+
+  background-color: rgb(0, 0, 0);
+  z-index: 0;
+ }
+ @keyframes rail_drive4{
+  0%{
+    visibility: hidden;
+  }
+  100%{
+    visibility: visible;
+  }
+ }
+ .rail_drive4_2{
+  position: absolute;
+  border-bottom: 500px solid rgb(0, 0, 0);
+  border-left: 1000px solid transparent;
+  border-right: 1000px solid transparent;
+  width: 150px;
+  top:125%;
+  left:19.9%;
+  transform:translate(-50%, -50%);
+  z-index: -1;
+
+  animation: rail_drvie4 forwards;
+  animation-delay: 5s;
+ }
+ /*드라이브4_나무*/
+ @keyframes move_drive4_t1 {
+  0% {
+    width: 350px;
+    height: 350px;
+    top:85%;
+    left:45%;
+  }
+  50%{
+    width: 60px;
+    height: 60px;
+    top:76%;
+    left:15%;
+  }
+  100%{
+    width: 60px;
+    height: 60px;
+    top:76%;
+    left:15%;
+  }
+}
+@keyframes move_drive4_t3 {
+  0% {
+    width: 350px;
+    height: 350px;
+    top:85%;
+    left:-15%;
+  }
+  50%{
+    width: 60px;
+    height: 60px;
+    top:76%;
+    left:18%;
+  }
+  100%{
+    width: 60px;
+    height: 60px;
+    top:76%;
+    left:18%;
+  }
+}
+ .t1_drive4{
+  position: absolute;
+  width: 250px;
+  height: 250px;
+  top:85%;
+  left:45%;
+  z-index: -1;
+  animation: move_drive4_t1 3s linear infinite;
+}
+.t2_drive4{
+  position: absolute;
+  width: 250px;
+  height: 250px;
+  top:85%;
+  left:45%;
+  z-index: -1;
+  animation: move_drive4_t1 3s linear infinite;
+  animation-delay: 2s;
+}
+.t3_drive4{
+  position: absolute;
+  width: 250px;
+  height: 250px;
+  top:85%;
+  left:-15%;
+  z-index: -1;
+  animation: move_drive4_t3 2.5s linear infinite;
+  animation-delay: 1s;
+}
+@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
+.typing_drive4{
+  position: absolute;
+  top:20%;
+  left: 10%;
+  width: 2000px;
+  font-size: 80px;
+  font-family: 'Russo One', sans-serif;
+  white-space: nowrap;
+}
+
+@keyframes logo{
+  0%{
+    visibility: hidden;
+  }
+  100%{
+    visibility: visible;
+  }
+} 
+.logo3{
+  position: absolute;
+  width: 300px;
+  height: 190px;
+  top: 10%;
+  left:44%;
+  
+  visibility: hidden;
+  animation: logo ;
+  animation-delay: 2.8s;
+  animation-fill-mode: forwards;
+}
+.logo1{
+  position: absolute;
+  width: 280px;
+  height: 200px;
+  top: 10%;
+  left:64%;
+
+  visibility: hidden;
+  animation: logo;
+  animation-delay: 3.4s;
+  animation-fill-mode: forwards;
+}
+.logo2{
+  position: absolute;
+  width: 290px;
+  height: 200px;
+  top: 10%;
+  left:82%;
+
+  visibility: hidden;
+  animation: logo;
+  animation-delay: 4s;
+  animation-fill-mode: forwards;
+}
