--- a/my-homepage/src/App.css
+++ b/my-homepage/src/App.css
@@ -106,6 +106,11 @@ body{
     }
 }
 
+@keyframes wheel_rotate2{
+	100% {
+    	transform: rotate(360deg);
+    }
+}
 .wheel_control{
   position: absolute;
   top:70%;
@@ -1187,6 +1192,7 @@ body{
   transform:translate(-50%, -50%);
   animation-delay: 4s;
   animation-fill-mode: forwards;
+  z-index: 3;
 }
 /*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
 /*@@@@@@@@@@@@@@@@@@@@@@@@드라이브4@@@@@@@@@@@@@@@@@@@@@@@@@*/
@@ -1380,3 +1386,202 @@ body{
   animation-delay: 4s;
   animation-fill-mode: forwards;
 }
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@@@@@@@@@@@@@@@@@@@@@@@드라이브5@@@@@@@@@@@@@@@@@@@@@@@@@*/
+.rail_drive5{
+  position: absolute;
+  background-color: black;
+  width: 3000px;
+  height: 100px;
+  top: 59%;
+  left: 50%;
+  transform:translate(-50%, -50%);
+}
+
+.rail_drive5_2{
+  position: absolute;
+  background-color: black;
+  width: 3000px;
+  height: 100px;
+  top: 126%;
+  left: 50%;
+  transform:translate(-50%, -50%);
+}
+/*자동차*/
+@keyframes g_move_5_1{
+  0%{
+    left: 130%;
+  }
+  100%{
+    left: -130%;
+  }
+} 
+.g_class_drive5_1{
+  position: absolute;
+  top:42%;
+  left: 130%;
+  transform:translate(-50%, -50%);
+  width: 360px;
+  height: 165px;
+  z-index: 1;
+  animation : g_move_5_1 5s; 
+  animation-delay: 1s;
+}
+.wheel_control_drive5_1{
+  position: absolute;
+  top:42%;
+  left: 130%;
+  width: 100px; 
+  height: 100px;
+  background-color: rgba(247, 0, 0, 0);
+  transform:translate(-50%, -50%);
+  z-index: 1;
+  animation : g_move_5_1 5s; 
+  animation-delay: 1s;
+}
+.w1_drive5_1{
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  top:68%;
+  left: -87.5%;
+
+  animation: wheel_rotate 0.3s linear infinite;
+  transform-origin: 50% 50%;
+  z-index: 1;
+}
+.w2_drive5_11{
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  top:68.5%;
+  left: 132.4%;
+  
+  animation: wheel_rotate 0.3s linear infinite;
+  transform-origin: 50% 50%;
+  z-index: 1;
+}
+@keyframes g_move_5_2{
+  0%{
+    right: 130%;
+  }
+  100%{
+    right: -130%;
+  }
+} 
+.g_class_drive5_2{
+  position: absolute;
+  top:109%;
+  right: 130%;
+  transform:translate(-50%, -50%);
+  width: 360px;
+  height: 165px;
+  z-index: 1;
+  animation: g_move_5_2 5s ;
+
+  animation-delay: 2s;
+}
+@keyframes rail_drive5_3{
+  0%{
+    left: 0%;
+  }
+  100%{
+    left: 260%;
+  }
+} 
+.rail_drive5_3{
+  position: absolute;
+  background-color: rgb(0, 0, 0);
+  width: 5000px;
+  height: 400px;
+  top: 65%;
+  left: 0%;
+  animation: rail_drive5_3 2.25s linear forwards;
+  animation-delay: 2.65s;
+}
+.wheel_control_drive5_2{
+  position: absolute;
+  top:109%;
+  right: 130%;
+  width: 100px; 
+  height: 100px;
+  background-color: rgba(247, 0, 0, 0);
+  transform:translate(-50%, -50%);
+  z-index: 1;
+  animation: g_move_5_2 5s ;
+  animation-delay: 2s;
+}
+.w1_drive5_2{
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  top:68%;
+  right: 392%;
+
+  animation: wheel_rotate2 0.3s linear infinite;
+  transform-origin: 50% 50%;
+  z-index: 1;
+}
+.w2_drive5_22{
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  top:68.5%;
+  right: 173%;
+  
+  animation: wheel_rotate2 0.3s linear infinite;
+  transform-origin: 50% 50%;
+  z-index: 1;
+}
+
+.typing_drive5_1{
+  position: absolute;
+  top:20%;
+  left: 10%;
+  width: 2000px;
+  font-size: 80px;
+  font-family: 'Russo One', sans-serif;
+  white-space: nowrap;
+}
+.typing_drive5_2{
+  position: absolute;
+  top:20%;
+  left: 78%;
+  width: 2000px;
+  font-size: 80px;
+  font-family: 'Russo One', sans-serif;
+  white-space: nowrap;
+}
+.typing_drive5_3{
+  position: absolute;
+  top: 88%;
+  left: 10%;
+  width: 2000px;
+  font-size: 80px;
+  font-family: 'Russo One', sans-serif;
+  white-space: nowrap;
+}
+@keyframes typing_drive5_4{
+  0%{
+    opacity: 0;
+  }
+  50%{
+    opacity: 1;
+  }
+  100%{
+    opacity: 0;
+  }
+} 
+.typing_drive5_4{
+  position: absolute;
+  top:88%;
+  left: 78.3%;
+  width: 2000px;
+  font-size: 80px;
+  font-family: 'Russo One', sans-serif;
+  white-space: nowrap;
+  animation: typing_drive5_4 1s infinite;
+  animation-delay: 3;
+}
+
